--- a/server/app/config/routing.yml
+++ b/server/app/config/routing.yml
@@ -1,3 +1,6 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+students:
+    resource: "@StudentsBundle/Resources/config/routing.yml"
+    prefix:   /api
+
+
+
